// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/presets/bitbucket-server/index fetchJSONFile() returns JSON 1`] = `
Object {
  "from": "api",
}
`;

exports[`config/presets/bitbucket-server/index fetchJSONFile() returns JSON 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "git.company.org",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://git.company.org/rest/api/1.0/projects/some/repos/repo/browse/some-filename.json?limit=20000",
  },
]
`;

exports[`config/presets/bitbucket-server/index fetchJSONFile() throws 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "git.company.org",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://git.company.org/rest/api/1.0/projects/some/repos/repo/browse/some-filename.json?limit=20000",
  },
]
`;

exports[`config/presets/bitbucket-server/index fetchJSONFile() throws to big 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "git.company.org",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://git.company.org/rest/api/1.0/projects/some/repos/repo/browse/some-filename.json?limit=20000",
  },
]
`;

exports[`config/presets/bitbucket-server/index fetchJSONFile() throws to invalid 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "git.company.org",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://git.company.org/rest/api/1.0/projects/some/repos/repo/browse/some-filename.json?limit=20000",
  },
]
`;

exports[`config/presets/bitbucket-server/index getPresetFromEndpoint() uses custom endpoint 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "api.github.example.org",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://api.github.example.org/rest/api/1.0/projects/some/repos/repo/browse/default.json?limit=20000",
  },
]
`;

exports[`config/presets/bitbucket-server/index getPresetFromEndpoint() uses custom path 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc",
      "host": "api.github.example.org",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://api.github.example.org/rest/api/1.0/projects/some/repos/repo/browse/path/default.json?limit=20000",
  },
]
`;
